--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,17 @@ group 'homo.efficio'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'idea'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
