--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 
 dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
+    compile group: 'com.google.auto.service', name: 'auto-service', version: '1.0-rc2'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
