--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
     compile group: 'com.google.auto.service', name: 'auto-service', version: '1.0-rc2'
+    compile group: 'commons-io', name: 'commons-io', version: '2.5'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
