--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,12 @@ dependencies {
     compile group: 'com.google.auto.service', name: 'auto-service', version: '1.0-rc2'
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
     compile group: 'org.springframework', name: 'spring-web', version: '4.3.4.RELEASE'
+    compile group: 'com.squareup', name: 'javapoet', version: '1.8.0'
+    compile group: 'org.springframework', name: 'spring-test', version: '4.3.4.RELEASE'
+    compile group: 'javax.transaction', name: 'javax.transaction-api', version: '1.2'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.4.2.RELEASE'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.5'
+    compile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
