--- a/build.gradle
+++ b/build.gradle
@@ -23,5 +23,7 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.5'
     compile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
 
+    compile files(org.gradle.internal.jvm.Jvm.current().toolsJar)
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
